# WasmPassword

./: .gitignore  DEVELOPMENT.md  README.md  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
scripts/: check-wasm-env.js
src/: App.vue  main.ts
src/assets/: main.css
src/router/: index.ts
src/stores/: crypto.ts
src/utils/: crypto.ts
src/views/: FileEncrypt.vue  Home.vue  Password.vue
src/wasm/: package.json  wasm_crypto.d.ts  wasm_crypto.js  wasm_crypto_bg.wasm  wasm_crypto_bg.wasm.d.ts
wasm-crypto/: Cargo.toml  README.md
wasm-crypto/src/: lib.rs
