[package]
name = "wasm-crypto"
version = "0.1.0"
edition = "2021"
description = "WebAssembly encryption module for WasmPassword"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebAssembly 绑定
wasm-bindgen = "0.2"

# 加密库
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# 数据处理
base64 = "0.22"
hex = "0.4"

# 错误处理
thiserror = "2.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# 控制台日志（调试用）
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

# 禁用 wasm-opt（避免下载 binaryen）
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
